# networking-concierge

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .npmrc  Dockerfile  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.build.json  tsconfig.json
api/prisma/: schema.prisma  seed.ts
api/prisma/migrations/20260429104527_init/: migration.sql
api/src/: app.module.ts  main.ts
api/src/attendees/: attendee-search.service.spec.ts  attendee-search.service.ts  attendees.controller.ts  attendees.module.ts  attendees.service.spec.ts  attendees.service.ts
api/src/concierge/: concierge.controller.ts  concierge.module.ts  concierge.service.spec.ts  concierge.service.ts  conversations.repository.spec.ts  conversations.repository.ts  feedback.controller.ts  feedback.service.spec.ts  feedback.service.ts
api/src/config/: env.validation.ts
api/src/embedding/: embedding.module.ts  embedding.service.spec.ts  embedding.service.ts  mock-embedding.service.spec.ts  mock-embedding.service.ts
api/src/events/: events.controller.ts  events.service.spec.ts  events.service.ts
api/src/health/: health.controller.ts
api/src/llm/: llm.module.ts  llm.service.spec.ts  llm.service.ts
api/src/prisma/: prisma.service.ts
api/test/: app.e2e-spec.ts  concierge.e2e-spec.ts  jest-e2e.json  jest-setup.ts  setup-test-db.ts  test-helpers.ts
docs/: ARCHITECTURE.md  EXECUTION-PLAN.md  PRD.md  TECH-DECISIONS.md
score-service/: Dockerfile  README.md  pyproject.toml
score-service/app/: main.py  models.py  scoring.py
score-service/tests/: test_scoring.py
(+18 files in other folders)
